assets/css/main.css
html {
    font-family: 'Montserrat', sans-serif;
}

a {
    @apply underline;
}

button {
    @apply bg-purple-900;
    @apply text-white;
    @apply p-2;
    @apply rounded-md;
}

ul {
    @apply list-disc;
    @apply ms-8;

    li {
        @apply my-1;
        @apply ps-1;
    }
}

ol {
    @apply list-decimal;
    @apply ms-8;

    li {
        @apply my-1;
        @apply ps-1;
    }
}

code {
    @apply text-purple-900;
    @apply bg-purple-50;
    @apply rounded-md;
    @apply border border-purple-200;
    @apply px-2;
    @apply py-0.5;
}

h1 {
    @apply text-3xl;
    @apply font-bold;
    @apply mb-4;
}

span img {
    @apply inline;
}

